syntax = "proto3";

package user;

option go_package = "./pb";

// User service definition
service UserService {
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
  rpc ListUsers(ListUsersRequest) returns (ListUsersResponse);
}

// User message
message User {
  int32 id = 1;
  string name = 2;
  string email = 3;
  int32 age = 4;
}

// Get user request/response
message GetUserRequest {
  int32 id = 1;
}

message GetUserResponse {
  User user = 1;
}

// Create user request/response
message CreateUserRequest {
  string name = 1;
  string email = 2;
  int32 age = 3;
}

message CreateUserResponse {
  User user = 1;
}

// List users request/response
message ListUsersRequest {}

message ListUsersResponse {
  repeated User users = 1;
}
